* [Bug 1697] filegen implementation should be improved.
* Refactor calendar functions in terms of new common code.
(4.2.7p77) 2010/11/03 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1692] packageinfo.sh needs to be "sourced" using ./ .
* [Bug 1695] ntpdate takes longer than necessary.
(4.2.7p76) 2010/11/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1690] Unit tests fails to build on some systems.
* [Bug 1691] Use first NMEA sentence each second.
* Put the sntp tests under sntp/ .
* ... and only build/run them if we have gtest.
* Documentation updates from Dave Mills.
(4.2.7p75) 2010/10/30 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Include Linus Karlsson's GSoC 2010 testing code.
(4.2.7p74) 2010/10/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1685] from 4.2.6p3-RC8: NMEA driver mode byte confusion.
* from 4.2.6p3-RC8: First cut at using scripts/checkChangeLog.
* Documentation updates from Dave Mills.
(4.2.7p73) 2010/10/27 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1680] Fix alignment of clock_select() arrays.
* refinements to new startup behavior from David Mills.
* For the bootstrap script, touch .html files last.
* Add 'make check' test case that would have caught [Bug 1678].
(4.2.7p72) 2010/10/26 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1679] Fix test for -lsocket.
* Clean up missing ;; entries in configure.ac.
(4.2.7p71) 2010/10/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1676] from 4.2.6p3-RC7: NMEA: $GPGLL did not work after fix
  for Bug 1571.
* [Bug 1678] "restrict source" treated as "restrict default".
* from 4.2.6p3-RC7: Added scripts/checkChangeLog.
(4.2.7p70) 2010/10/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1571] from 4.2.6p3-RC6: NMEA does not relate data to PPS edge.
* [Bug 1572] from 4.2.p63-RC6: NMEA time adjustment for GPZDG buggy.
* [Bug 1675] from 4.2.6p3-RC6: Prohibit includefile remote config.
* Enable generating ntpd/ntp_keyword.h after keyword-gen.c changes on