@@ -1,5 +1,6 @@
 * [Bug 1697] filegen implementation should be improved.
 * Refactor calendar functions in terms of new common code.
+* Documentation updates from Dave Mills.
 (4.2.7p77) 2010/11/03 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1692] packageinfo.sh needs to be "sourced" using ./ .
 * [Bug 1695] ntpdate takes longer than necessary.
